working with templates

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,8 +5,8 @@
 <title>Документ без названия</title>
 </head>
 <body>
-<h1>Приветствую!</h1>
-<h3>Тут что-то написано</h3>
-<i>Тут тоже что-то написано</i>
+<h1>Добро пожаловать в "Очень странный магазин"!</h1>
+<h3><a href=/items> Каталог товаров </a></h3>
+<i>Тут что-то зачем-то написано</i>
 </body>
 </html>
