--- a/templates/item.html
+++ b/templates/item.html
@@ -5,13 +5,13 @@
     <title>Django на METANIT.COM</title>
 </head>
 <body>
-    <p>id товара: {{ id }}</p>
-    <p>Наименование товара: {{ name }} </p>
+    <p>id товара: {{ data.id }}</p>
+    <p>Наименование товара: {{ data.name }} </p>
     <p>
-        {% if quantity == 0 %}
+        {% if data.count == 0 %}
             Товар отсутствует
         {% else %}
-        Количество: {{ quantity }}</p>
+        Бренд: {{ data.brand }}</p>
         {% endif %}
 
     <p><a href=/items> Назад к списку товаров </a></p>
