--- a/templates/item.html
+++ b/templates/item.html
@@ -7,6 +7,7 @@
 <body>
     <p>id товара: {{ data.id }}</p>
     <p>Наименование товара: {{ data.name }} </p>
+    <p>Описание: {{ data.prim }}</p>
     <p>
         {% if data.count == 0 %}
             Товар отсутствует
